src/internal/vm/snapshots/hebi__internal__vm__tests__builtin_collect_native.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
collect("a\nb\nc".lines())


# Result:
Object(
    [
        Object(
            "a",
        ),
        Object(
            "b",
        ),
        Object(
            "c",
        ),
    ],
)
