src/internal/vm/snapshots/hebi__internal__vm__tests__builtin_list_methods.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
v := [0, 1, 2]

print "len", v.len()
print "is_empty", v.is_empty()
print "get(1)", v.get(1)
print "pop()", v.pop()
print "set", v.set(0, v.get(1))
print "join", v.join(", ")
print "push(2)", v.push(2)
print "extend(3, 0)", v.extend(3, 0)
print "join", v.join(", ")


# Result:
None

# Output:
len 3
is_empty false
get(1) 1
pop() 2
set none
join 1, 1
push(2) none
extend(3, 0) none
join 1, 1, 2, 0, 0, 0

