src/internal/vm/snapshots/hebi__internal__vm__tests__builtin_str_methods.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
v := "a\nb\nc"

print "len", v.len()
print "is_empty", v.is_empty()
print "lines", v.lines()


# Result:
None

# Output:
len 5
is_empty false
lines <str lines>

