src/internal/vm/snapshots/hebi__internal__vm__tests__builtin_str_methods_static.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
v := "a\nb\nc"

print "len", Str.len(v)
print "is_empty", Str.is_empty(v)
print "lines", Str.lines(v)


# Result:
None

# Output:
len 5
is_empty false
lines <str lines>

