src/internal/vm/snapshots/hebi__internal__vm__tests__call_class_method2.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  v = 10
  fn set(self, v):
    self.v = v
  fn get(self):
    return self.v

t := T()
t.set(20)
t.get()


# Result:
Int(
    20,
)
